fix z-index mess

--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -3,6 +3,8 @@
 
 .l-main {
   width: 100%;
+  //  fix zIndex mess
+  position: relative;
   background-color: #ffffff;
   -webkit-transition: all .6s;
   -moz-transition: all .6s;
